cities ok home page still working

--- a/austin.html
+++ b/austin.html
@@ -24,7 +24,10 @@
       <a href="sanantonio.html"><img src="images/sanantonio-city.png" alt="San Antonio" /></a>
     </div>
     <div class="content">
-      <img src="adbcbe77-3e5b-4ec1-b673-a0ea1aeee6ca.png" alt="Austin Image" class="flag" />
+      <div>
+        <img src="images/austin_landmark.png" alt="Austin Image" class="flag" />
+      </div>
+      
       <div class="description">
         <h2>Austin</h2>
         
