--- a/dallas.html
+++ b/dallas.html
@@ -24,7 +24,7 @@
       <a href="sanantonio.html"><img src="images/sanantonio-city.png" alt="San Antonio" /></a>
     </div>
     <div class="content">
-      <img src="4e0a8653-fe3d-4434-bdf9-c63ab430ad9b.png" alt="Dallas Image" class="flag" />
+      <img src="images/dallas_landmark.png" alt="Dallas Image" class="flag" />
       <div class="description">
         <h2>Dallas</h2>
         
