--- a/index.html
+++ b/index.html
@@ -25,8 +25,12 @@
       <a href="dallas.html"><img src="images/dallas-city.png" alt="Dallas" /></a>
       <a href="sanantonio.html"><img src="images/sanantonio-city.png" alt="San Antonio" /></a>
     </div>
-
+    
+    
     <div class="content">
+      <div>
+      <img src="images/texas-flag.png" alt="Texas Flag" class="flag" />
+      </div>
       <ul class="description">
         <li>Texas, the second-largest state in the United States, is known for its rich history, diverse culture, and vast landscapes.</li>
         <li>Texas offers something for everyone, from wide-open plains and deserts to lush forests and coastlines along the Gulf of Mexico.</li>
@@ -61,7 +65,6 @@
         <p><a href="https://traveltexas.com" target="_blank">Visit Travel Texas</a></p>
       </div>
 
-      <img src="images/texas-flag.png" alt="Texas Flag" class="flag" />
     </div>
 
     <footer>© 2025 Texas Information Site. Designed by Miguel Gonzalez.</footer>
