--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -41,8 +40,11 @@
         <li>The state capital is Austin, a city celebrated for its vibrant music scene, tech innovation, and cultural diversity.</li>
         <li>Whether exploring natural wonders like Big Bend National Park, learning about history at The Alamo, or enjoying world-class BBQ, Texas welcomes everyone with bold spirit and southern hospitality.</li>
       </ul>
-
-      <div class="extras">
+    </div>
+    <footer>© 2025 Texas Information Site. Designed by Miguel Gonzalez.</footer>
+  </div>
+  <div class="hero2">
+    <div class="extras">
         <ol>
           <li>State Flower: Bluebonnet</li>
           <li>State Bird: Northern Mockingbird</li>
@@ -64,11 +66,7 @@
 
         <p><a href="https://traveltexas.com" target="_blank">Visit Travel Texas</a></p>
       </div>
-
-    </div>
-
-    <footer>© 2025 Texas Information Site. Designed by Miguel Gonzalez.</footer>
-  </div>
+</div>
 
 <a href="contact.html" class="contact-float-button">Contact Us</a>
 <style>
