--- a/index.html
+++ b/index.html
@@ -13,9 +13,14 @@
     
     <div class="top-bar">
       <div class="socials">
-        <img src="images/facebook-icon.png" alt="Facebook" />
-        <img src="images/instagram-icon.png" alt="Instagram" />
+      <a href="https://www.facebook.com/Texas.gov/" target="_blank">
+      <img src="images/facebook-icon.png" alt="Facebook" />
+    </a>
+      <a href="https://www.instagram.com/texasgov/" target="_blank">
+      <img src="images/instagram-icon.png" alt="Instagram" />
+    </a>
       </div>
+
     </div>
 
     <h1 id="main-title">WELCOME TO TEXAS<br><span>THE LONE STAR STATE</span></h1>
