--- a/austin.html
+++ b/austin.html
@@ -12,8 +12,12 @@
   <div class="hero">
     <div class="top-bar">
       <div class="socials">
-        <img src="images/facebook-icon.png" alt="Facebook" />
-        <img src="images/instagram-icon.png" alt="Instagram" />
+      <a href="https://www.facebook.com/Texas.gov/" target="_blank">
+      <img src="images/facebook-icon.png" alt="Facebook" />
+      </a>
+      <a href="https://www.instagram.com/texasgov/" target="_blank">
+      <img src="images/instagram-icon.png" alt="Instagram" />
+      </a>
       </div>
     </div>
     <h1>WELCOME TO TEXAS<br><span>THE LONE STAR STATE</span></h1>
@@ -25,7 +29,7 @@
     </div>
     <div class="content">
       <div>
-        <img src="images/austin_landmark.png" alt="Austin Image" class="flag" />
+        <img src="images/austin_landmark.png" alt="Austin Image" class="flag city-flag" />
       </div>
       
       <div class="description">
