--- a/dallas.html
+++ b/dallas.html
@@ -12,8 +12,12 @@
   <div class="hero">
     <div class="top-bar">
       <div class="socials">
-        <img src="images/facebook-icon.png" alt="Facebook" />
-        <img src="images/instagram-icon.png" alt="Instagram" />
+      <a href="https://www.facebook.com/Texas.gov/" target="_blank">
+      <img src="images/facebook-icon.png" alt="Facebook" />
+      </a>
+      <a href="https://www.instagram.com/texasgov/" target="_blank">
+      <img src="images/instagram-icon.png" alt="Instagram" />
+      </a>
       </div>
     </div>
     <h1>WELCOME TO TEXAS<br><span>THE LONE STAR STATE</span></h1>
@@ -24,7 +28,7 @@
       <a href="sanantonio.html"><img src="images/sanantonio-city.png" alt="San Antonio" /></a>
     </div>
     <div class="content">
-      <img src="images/dallas_landmark.png" alt="Dallas Image" class="flag" />
+      <img src="images/dallas_landmark.png" alt="Dallas Image" class="flag city-flag" />
       <div class="description">
         <h2>Dallas</h2>
         
