--- a/austin.html
+++ b/austin.html
@@ -7,7 +7,8 @@
   <title>Austin - Texas Cities</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
-<body>
+<body class="city-page">
+
   
   <div class="hero">
     <div class="top-bar">
