--- a/sanantonio.html
+++ b/sanantonio.html
@@ -7,7 +7,7 @@
   <title>San Antonio - Texas Cities</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
-<body>
+<body class="city-page">
   
   <div class="hero">
     <div class="top-bar">
