info for citys add

--- a/dallas.html
+++ b/dallas.html
@@ -35,6 +35,9 @@
         <p><strong>Dallas</strong> is a significant city in northern Texas and part of the larger Dallas–Fort Worth metroplex. It is known for its historical significance, including the Sixth Floor Museum at Dealey Plaza, which commemorates the site of President John F. Kennedy's assassination. Dallas is also a commercial and cultural hub with strong finance, telecommunications, and transportation industries.</p>
         <ul>
             <li>Population: 1.3 million</li>
+            <li>Year Incorporated: 1856</li>
+            <li>Region: North Texas</li>
+            <li>Classification: Urban</li>
             <li>Average Salary: $68,000/year</li>
             <li>Cost of Living Index: 103</li>
             <li>Average Weather: Hot summers, cool winters, annual average temperature 66°F</li>
