--- a/sanantonio.html
+++ b/sanantonio.html
@@ -35,6 +35,9 @@
         <p><strong>San Antonio</strong> is a city rich in history and culture in south-central Texas. It is home to The Alamo, a historic Spanish mission and site of a famous battle for Texas independence. The city features a beautiful River Walk, a network of walkways along the San Antonio River, and a diverse culinary scene. Tourism, military, healthcare, and oil industries drive the economy.</p>
         <ul>
             <li>Population: 1.5 million</li>
+            <li>Year Incorporated: 1837</li>
+            <li>Region: south-central Texas</li>
+            <li>Classification: Urban</li>
             <li>Average Salary: $60,000/year</li>
             <li>Cost of Living Index: 89</li>
             <li>Average Weather: Warm climate year-round, annual average temperature 70°F</li>
