--- a/austin.html
+++ b/austin.html
@@ -36,6 +36,9 @@
         <p><strong>Austin</strong> is the capital of Texas and one of the fastest-growing cities in the United States. Known for its vibrant live music scene, Austin is often called the 'Live Music Capital of the World'. It is a hub for technology, innovation, and higher education, with the University of Texas at Austin located in the city's heart. The city offers a high quality of life, numerous outdoor activities, and a thriving cultural scene.</p>
         <ul>
             <li>Population: 974,000</li>
+            <li>Year Incorporated: 1939</li>
+            <li>Region: Central Texas</li>
+            <li>Classification: Urban</li>
             <li>Average Salary: $72,000/year</li>
             <li>Cost of Living Index: 119 (U.S. average is 100)</li>
             <li>Average Weather: Mild winters, hot summers, annual average temperature 70°F</li>
