--- a/austin.html
+++ b/austin.html
@@ -41,6 +41,7 @@
             <li>Classification: Urban</li>
             <li>Average Salary: $72,000/year</li>
             <li>Cost of Living Index: 119 (U.S. average is 100)</li>
+            <li>Average Income Compared to State: Higher than the state average</li>
             <li>Average Weather: Mild winters, hot summers, annual average temperature 70°F</li>
         </ul>
         
