--- a/dallas.html
+++ b/dallas.html
@@ -40,6 +40,7 @@
             <li>Classification: Urban</li>
             <li>Average Salary: $68,000/year</li>
             <li>Cost of Living Index: 103</li>
+            <li>Average Income Compared to State: Slightly higher than the state average</li>
             <li>Average Weather: Hot summers, cool winters, annual average temperature 66°F</li>
         </ul>
         
