--- a/sanantonio.html
+++ b/sanantonio.html
@@ -40,6 +40,7 @@
             <li>Classification: Urban</li>
             <li>Average Salary: $60,000/year</li>
             <li>Cost of Living Index: 89</li>
+            <li>Average Income Compared to State: Lower than the state average</li>
             <li>Average Weather: Warm climate year-round, annual average temperature 70°F</li>
         </ul>
         
