need fix size of images citys

--- a/sanantonio.html
+++ b/sanantonio.html
@@ -28,7 +28,7 @@
       <a href="sanantonio.html"><img src="images/sanantonio-city.png" alt="San Antonio" /></a>
     </div>
     <div class="content">
-      <img src="images/sanantonio_landmark.png" alt="San Antonio Image" class="flag city-flag" />
+      <img src="images/sanantonio_landmark.jpg" alt="San Antonio Image" class="flag city-flag" />
       <div class="description">
         <h2>San Antonio</h2>
         
