--- a/dallas.html
+++ b/dallas.html
@@ -28,7 +28,7 @@
       <a href="sanantonio.html"><img src="images/sanantonio-city.png" alt="San Antonio" /></a>
     </div>
     <div class="content">
-      <img src="images/dallas_landmark.png" alt="Dallas Image" class="flag city-flag" />
+      <img src="images/dallas_landmark.jpg" alt="Dallas Image" class="flag city-flag" />
       <div class="description">
         <h2>Dallas</h2>
         
