--- a/austin.html
+++ b/austin.html
@@ -47,7 +47,7 @@
         
       </div>
     </div>
-    <footer>© 2025 Texas Information Site. Designed by Miguel Gonzalez.</footer>
+    <footer>© 2025 Texas Information Site. Designed by Miguel Gonzalez. <p><a href="sources.html">Sources & Citations</a></p></footer>
   </div>
 
 <a href="contact.html" class="contact-float-button">Contact Us</a>
