--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </table>
       <p><a href="https://traveltexas.com" target="_blank">Visit Travel Texas</a></p>      
     </div>
-    <footer>© 2025 Texas Information Site. Designed by Miguel Gonzalez.</footer>  
+    <footer>© 2025 Texas Information Site. Designed by Miguel Gonzalez. <p><a href="sources.html">Sources & Citations</a></p></footer>  
   </div>
 
 <a href="contact.html" class="contact-float-button">Contact Us</a>
