--- a/sources.html
+++ b/sources.html
@@ -6,20 +6,22 @@
   <title>Sources and Citations - Texas Website</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
-<body>
+
+<body class="city-page sources-page"></body>
   <div class="hero">
-    <h1>Sources and Citations</h1>
+    <h1>WELCOME TO TEXAS<br><span>THE LONE STAR STATE</span></h1>    
     <div class="city-icons">
       <a href="index.html"><img src="images/texas-city.png" alt="Texas" /></a>
       <a href="austin.html"><img src="images/austin-city.png" alt="Austin" /></a>
       <a href="dallas.html"><img src="images/dallas-city.png" alt="Dallas" /></a>
       <a href="sanantonio.html"><img src="images/sanantonio-city.png" alt="San Antonio" /></a>
-      <a href="contact.html"><img src="images/contact-icon.png" alt="Contact Us" /></a>
+      
     </div>
+    <h1>Sources and Citations</h1>
     <div class="description">
       <ul>
         <li>U.S. Census Bureau. (2023). <em>QuickFacts: Texas Cities</em>. Retrieved from <a href="https://www.census.gov/quickfacts/" target="_blank">https://www.census.gov/quickfacts/</a></li>
-        <li>City of Austin. (2023). <em>About Austin</em>. Retrieved from <a href="https://www.austintexas.gov/department/about-austin" target="_blank">https://www.austintexas.gov/department/about-austin</a></li>
+        <li>City of Austin. (2023). <em>About Austin</em>. Retrieved from <a href="https://www.austintexas.gov" target="_blank">https://www.austintexas.gov</a></li>
         <li>City of San Antonio. (2023). <em>San Antonio Visitor Information</em>. Retrieved from <a href="https://www.sanantonio.gov" target="_blank">https://www.sanantonio.gov</a></li>
         <li>Texas State Historical Association. (2023). <em>Texas Overview</em>. Retrieved from <a href="https://www.tshaonline.org" target="_blank">https://www.tshaonline.org</a></li>
         <li>Travel Texas. (2023). <em>Explore Texas</em>. Retrieved from <a href="https://www.traveltexas.com" target="_blank">https://www.traveltexas.com</a></li>
@@ -28,5 +30,26 @@
     </div>
     <footer>© 2025 Texas Information Site. Designed by Miguel Gonzalez. <br><a href="sources.html">Sources & Citations</a></footer>
   </div>
+<a href="contact.html" class="contact-float-button">Contact Us</a>
+<style>
+  .contact-float-button {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: white;
+    color: black;
+    padding: 12px 20px;
+    font-size: 16px;
+    font-weight: bold;
+    text-decoration: none;
+    border-radius: 8px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+    z-index: 999;
+  }
+
+  .contact-float-button:hover {
+    background-color: #ddd;
+  }
+</style>
 </body>
 </html>
