--- a/contact.html
+++ b/contact.html
@@ -50,8 +50,7 @@
 
       <button type="submit">Submit</button>
     </form>
-
-    <footer>© 2025 Texas Information Site. Designed by Miguel Gonzalez.</footer>
+    <footer>© 2025 Texas Information Site. Designed by Miguel Gonzalez. <p><a href="sources.html">Sources & Citations</a></p></footer>
   </div>
 
   
