add icon for socials

--- a/sources.html
+++ b/sources.html
@@ -9,6 +9,15 @@
 
 <body class="city-page sources-page"></body>
   <div class="hero">
+    <div class="top-bar">
+      <div class="socials">
+      <a href="https://www.facebook.com/Texas.gov/" target="_blank">
+      <img src="images/facebook-icon.png" alt="Facebook" />
+      </a>
+      <a href="https://www.instagram.com/texasgov/" target="_blank">
+      <img src="images/instagram-icon.png" alt="Instagram" />
+      </a>
+      </div>
     <h1>WELCOME TO TEXAS<br><span>THE LONE STAR STATE</span></h1>    
     <div class="city-icons">
       <a href="index.html"><img src="images/texas-city.png" alt="Texas" /></a>
