--- a/sources.html
+++ b/sources.html
@@ -18,6 +18,7 @@
       <img src="images/instagram-icon.png" alt="Instagram" />
       </a>
     </div>
+    </div>
     <h1>WELCOME TO TEXAS<br><span>THE LONE STAR STATE</span></h1>    
     <div class="city-icons">
       <a href="index.html"><img src="images/texas-city.png" alt="Texas" /></a>
