--- a/sources.html
+++ b/sources.html
@@ -27,7 +27,8 @@
       <a href="sanantonio.html"><img src="images/sanantonio-city.png" alt="San Antonio" /></a>
       
     </div>
-    <h1>Sources and Citations</h1>
+    <img src="images/longhorn.jpg" alt="longhorn Image" class="flag city-flag" />
+    <h1>Sources and Citations</h1>    
     <div class="description">
       <ul>
         <li>U.S. Census Bureau. (2023). <em>QuickFacts: Texas Cities</em>. Retrieved from <a href="https://www.census.gov/quickfacts/" target="_blank">https://www.census.gov/quickfacts/</a></li>
