--- a/sources.html
+++ b/sources.html
@@ -27,7 +27,7 @@
       <a href="sanantonio.html"><img src="images/sanantonio-city.png" alt="San Antonio" /></a>
       
     </div>
-    <img src="images/longhorn.jpg" alt="longhorn Image" class="flag city-flag" />
+    <img src="images/longhorn.jpg" alt="longhorn Image" class="flag city-flag longhorn-img" />
     <h1>Sources and Citations</h1>    
     <div class="description">
       <ul>
