--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,8 @@
       <a href="dallas.html"><img src="images/dallas-city.png" alt="Dallas" /></a>
       <a href="sanantonio.html"><img src="images/sanantonio-city.png" alt="San Antonio" /></a>
     </div>
-
+    <img src="images/email.jpg" alt="Email Image" class="Email-img" />
+    
     <form class="floating-form" onsubmit="return validateEmails()">
       <h2>Contact Us</h2>
       <label for="fname">First Name:</label>
