--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="styles.css" />
 
 </head>
-<body>
+<body class="contact-page">
   
   <div class="hero">
     <div class="top-bar">
@@ -30,7 +30,8 @@
       <a href="dallas.html"><img src="images/dallas-city.png" alt="Dallas" /></a>
       <a href="sanantonio.html"><img src="images/sanantonio-city.png" alt="San Antonio" /></a>
     </div>
-    <img src="images/email.jpg" alt="Email Image" class="Email-img" />
+  <div class="form-layout">
+      <img src="images/email.jpg" alt="Email Illustration" class="email-img" />
     
     <form class="floating-form" onsubmit="return validateEmails()">
       <h2>Contact Us</h2>
@@ -51,6 +52,7 @@
 
       <button type="submit">Submit</button>
     </form>
+    </div>
     <footer>© 2025 Texas Information Site. Designed by Miguel Gonzalez. <p><a href="sources.html">Sources & Citations</a></p></footer>
   </div>
 
