--- a/sources.html
+++ b/sources.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 
-<body class="city-page sources-page"></body>
+<body class="city-page sources-page">
   <div class="hero">
     <div class="top-bar">
       <div class="socials">
