--- a/sources.html
+++ b/sources.html
@@ -1,66 +1,161 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sources and Citations - Texas Website</title>
-  <link rel="stylesheet" href="styles.css" />
+  <meta charset="utf-8" />
+  <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+  <title>
+    Sources and Citations - Texas Website
+  </title>
+  <link href="styles.css" rel="stylesheet" />
 </head>
 
 <body class="city-page sources-page">
   <div class="hero">
     <div class="top-bar">
       <div class="socials">
-      <a href="https://www.facebook.com/Texas.gov/" target="_blank">
-      <img src="images/facebook-icon.png" alt="Facebook" />
+        <a href="https://www.facebook.com/Texas.gov/" target="_blank">
+          <img alt="Facebook" src="images/facebook-icon.png" />
+        </a>
+        <a href="https://www.instagram.com/texasgov/" target="_blank">
+          <img alt="Instagram" src="images/instagram-icon.png" />
+        </a>
+      </div>
+    </div>
+    <h1>
+      WELCOME TO TEXAS
+      <br />
+      <span>
+        THE LONE STAR STATE
+      </span>
+    </h1>
+    <nav>
+      <div class="city-icons">
+        <a href="index.html">
+          <img alt="Texas" src="images/texas-city.png" />
+        </a>
+        <a href="austin.html">
+          <img alt="Austin" src="images/austin-city.png" />
+        </a>
+        <a href="dallas.html">
+          <img alt="Dallas" src="images/dallas-city.png" />
+        </a>
+        <a href="sanantonio.html">
+          <img alt="San Antonio" src="images/sanantonio-city.png" />
+        </a>
+      </div>
+    </nav>
+    <main class="layout-main">
+      <main class="content">
+        <section class="content-row">
+          <img alt="Texas Gavel Image" class="flag city-flag" src="images/banner.jpg" />
+          <div class="description">
+            <ul>
+              <li>
+                U.S. Census Bureau. (2023).
+                <em>
+                  QuickFacts: Texas Cities
+                </em>
+                . Retrieved from
+                <a href="https://www.census.gov/quickfacts/" target="_blank">
+                  https://www.census.gov/quickfacts/
+                </a>
+              </li>
+              <li>
+                City of Austin. (2023).
+                <em>
+                  About Austin
+                </em>
+                . Retrieved from
+                <a href="https://www.austintexas.gov" target="_blank">
+                  https://www.austintexas.gov
+                </a>
+              </li>
+              <li>
+                City of San Antonio. (2023).
+                <em>
+                  San Antonio Visitor Information
+                </em>
+                . Retrieved from
+                <a href="https://www.sanantonio.gov" target="_blank">
+                  https://www.sanantonio.gov
+                </a>
+              </li>
+              <li>
+                Texas State Historical Association. (2023).
+                <em>
+                  Texas Overview
+                </em>
+                . Retrieved from
+                <a href="https://www.tshaonline.org" target="_blank">
+                  https://www.tshaonline.org
+                </a>
+              </li>
+              <li>
+                Travel Texas. (2023).
+                <em>
+                  Explore Texas
+                </em>
+                . Retrieved from
+                <a href="https://www.traveltexas.com" target="_blank">
+                  https://www.traveltexas.com
+                </a>
+              </li>
+              <li>
+                NerdWallet. (2023).
+                <em>
+                  Cost of Living Calculator
+                </em>
+                . Retrieved from
+                <a href="https://www.nerdwallet.com/cost-of-living-calculator" target="_blank">
+                  https://www.nerdwallet.com/cost-of-living-calculator
+                </a>
+              </li>
+            </ul>
+          </div>
+          <aside class="aside-float">
+            <p>
+              These trusted sources were used to provide factual and economic data about Texas cities, population,
+              incorporation dates, and cost of living estimates. Always refer to original links for the most up-to-date
+              information.
+            </p>
+          </aside>
+        </section>
+      </main>
+    </main>
+    <div id="tip-box">Tip: Click on a city icon to learn more!</div>
+    <footer>
+      © 2025 Texas Information Site. Designed by Miguel Gonzalez.
+      <br />
+      <a href="sources.html">
+        Sources &amp;
+        Citations
       </a>
-      <a href="https://www.instagram.com/texasgov/" target="_blank">
-      <img src="images/instagram-icon.png" alt="Instagram" />
-      </a>
-    </div>
-    </div>
-    <h1>WELCOME TO TEXAS<br><span>THE LONE STAR STATE</span></h1>    
-    <div class="city-icons">
-      <a href="index.html"><img src="images/texas-city.png" alt="Texas" /></a>
-      <a href="austin.html"><img src="images/austin-city.png" alt="Austin" /></a>
-      <a href="dallas.html"><img src="images/dallas-city.png" alt="Dallas" /></a>
-      <a href="sanantonio.html"><img src="images/sanantonio-city.png" alt="San Antonio" /></a>
-      
-    </div>
-    <img src="images/banner.jpg" alt="Texas Gavel Banner" class="banner-img" />
-    <h1>Sources and Citations</h1>    
-    <div class="description">
-      <ul>
-        <li>U.S. Census Bureau. (2023). <em>QuickFacts: Texas Cities</em>. Retrieved from <a href="https://www.census.gov/quickfacts/" target="_blank">https://www.census.gov/quickfacts/</a></li>
-        <li>City of Austin. (2023). <em>About Austin</em>. Retrieved from <a href="https://www.austintexas.gov" target="_blank">https://www.austintexas.gov</a></li>
-        <li>City of San Antonio. (2023). <em>San Antonio Visitor Information</em>. Retrieved from <a href="https://www.sanantonio.gov" target="_blank">https://www.sanantonio.gov</a></li>
-        <li>Texas State Historical Association. (2023). <em>Texas Overview</em>. Retrieved from <a href="https://www.tshaonline.org" target="_blank">https://www.tshaonline.org</a></li>
-        <li>Travel Texas. (2023). <em>Explore Texas</em>. Retrieved from <a href="https://www.traveltexas.com" target="_blank">https://www.traveltexas.com</a></li>
-        <li>NerdWallet. (2023). <em>Cost of Living Calculator</em>. Retrieved from <a href="https://www.nerdwallet.com/cost-of-living-calculator" target="_blank">https://www.nerdwallet.com/cost-of-living-calculator</a></li>
-      </ul>
-    </div>
-    <footer>© 2025 Texas Information Site. Designed by Miguel Gonzalez. <br><a href="sources.html">Sources & Citations</a></footer>
+    </footer>
   </div>
-<a href="contact.html" class="contact-float-button">Contact Us</a>
-<style>
-  .contact-float-button {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    background-color: white;
-    color: black;
-    padding: 12px 20px;
-    font-size: 16px;
-    font-weight: bold;
-    text-decoration: none;
-    border-radius: 8px;
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
-    z-index: 999;
-  }
+  <a class="contact-float-button" href="contact.html">
+    Contact Us
+  </a>
+  <style>
+    .contact-float-button {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background-color: white;
+      color: black;
+      padding: 12px 20px;
+      font-size: 16px;
+      font-weight: bold;
+      text-decoration: none;
+      border-radius: 8px;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+      z-index: 999;
+    }
 
-  .contact-float-button:hover {
-    background-color: #ddd;
-  }
-</style>
+    .contact-float-button:hover {
+      background-color: #ddd;
+    }
+  </style>
 </body>
+
 </html>
