--- a/austin.html
+++ b/austin.html
@@ -1,73 +1,92 @@
-
 <!DOCTYPE html>
+
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="utf-8" />
+  <meta content="width=device-width, initial-scale=1.0" name="viewport" />
   <title>Austin - Texas Cities</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link href="styles.css" rel="stylesheet" />
 </head>
+
 <body class="city-page">
   <div class="hero">
-    <div class="top-bar">
-      <div class="socials">
-      <a href="https://www.facebook.com/Texas.gov/" target="_blank">
-      <img src="images/facebook-icon.png" alt="Facebook" />
-      </a>
-      <a href="https://www.instagram.com/texasgov/" target="_blank">
-      <img src="images/instagram-icon.png" alt="Instagram" />
-      </a>
-    </div>
-    </div>
-    <h1>WELCOME TO TEXAS<br><span>THE LONE STAR STATE</span></h1>
-    <div class="city-icons">
-      <a href="index.html"><img src="images/texas-city.png" alt="Texas" /></a>
-      <a href="austin.html"><img src="images/austin-city.png" alt="Austin" /></a>
-      <a href="dallas.html"><img src="images/dallas-city.png" alt="Dallas" /></a>
-      <a href="sanantonio.html"><img src="images/sanantonio-city.png" alt="San Antonio" /></a>
-    </div>
-    <div class="content">      
-        <img src="images/austin_landmark.png" alt="Austin Image" class="flag city-flag" />    
-        <div class="description">
-        <h2>Austin</h2>
-        
-        <p><strong>Austin</strong> is the capital of Texas and one of the fastest-growing cities in the United States. Known for its vibrant live music scene, Austin is often called the 'Live Music Capital of the World'. It is a hub for technology, innovation, and higher education, with the University of Texas at Austin located in the city's heart. The city offers a high quality of life, numerous outdoor activities, and a thriving cultural scene.</p>
-        <ul>
-            <li>Population: 974,000</li>
-            <li>Year Incorporated: 1939</li>
-            <li>Region: Central Texas</li>
-            <li>Classification: Urban</li>
-            <li>Average Salary: $72,000/year</li>
-            <li>Cost of Living Index: 119 (U.S. average is 100)</li>
-            <li>Average Income Compared to State: Higher than the state average</li>
-            <li>Average Weather: Mild winters, hot summers, annual average temperature 70°F</li>
-        </ul>        
+    <header>
+      <div class="top-bar">
+        <div class="socials">
+          <a href="https://www.facebook.com/Texas.gov/" target="_blank">
+            <img alt="Facebook" src="images/facebook-icon.png" />
+          </a>
+          <a href="https://www.instagram.com/texasgov/" target="_blank">
+            <img alt="Instagram" src="images/instagram-icon.png" />
+          </a>
+        </div>
       </div>
-    </div>
-    <footer>© 2025 Texas Information Site. Designed by Miguel Gonzalez. <p><a href="sources.html">Sources & Citations</a></p></footer>
+      <h1>WELCOME TO TEXAS<br /><span>THE LONE STAR STATE</span></h1>
+    </header>
+    <nav>
+      <div class="city-icons">
+        <a href="index.html"><img alt="Texas" src="images/texas-city.png" /></a>
+        <a href="austin.html"><img alt="Austin" src="images/austin-city.png" /></a>
+        <a href="dallas.html"><img alt="Dallas" src="images/dallas-city.png" /></a>
+        <a href="sanantonio.html"><img alt="San Antonio" src="images/sanantonio-city.png" /></a>
+      </div>
+    </nav>
+    <main class="layout-main">
+      <main class="content">
+        <section class="content-row">
+          <img alt="Austin Image" class="flag city-flag" src="images/austin_landmark.png" />
+          <div class="description">
+            <h2>Austin</h2>
+            <p><strong>Austin</strong> is the capital of Texas and one of the fastest-growing cities in the United
+              States. Known for its vibrant live music scene, Austin is often called the 'Live Music Capital of the
+              World'. It is a hub for technology, innovation, and higher education, with the University of Texas at
+              Austin located in the city's heart. The city offers a high quality of life, numerous outdoor activities,
+              and a thriving cultural scene.</p>
+            <ul>
+              <li>Population: 974,000</li>
+              <li>Year Incorporated: 1939</li>
+              <li>Region: Central Texas</li>
+              <li>Classification: Urban</li>
+              <li>Average Salary: $72,000/year</li>
+              <li>Cost of Living Index: 119 (U.S. average is 100)</li>
+              <li>Average Income Compared to State: Higher than the state average</li>
+              <li>Average Weather: Mild winters, hot summers, annual average temperature 70°F</li>
+            </ul>
+          </div>
+        </section>
+        <aside class="aside-float">
+          <h3>Did You Know?</h3>
+          <p>Austin is known for its vibrant live music and tech innovation.</p>
+        </aside>
+      </main>
+    </main>
+    <div id="tip-box">Tip: Click on a city icon to learn more!</div>
+    <footer>© 2025 Texas Information Site. Designed by Miguel Gonzalez. <p><a href="sources.html">Sources &amp;
+          Citations</a></p>
+    </footer>
   </div>
+  <style>
+    .contact-float-button {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background-color: white;
+      color: black;
+      padding: 12px 20px;
+      font-size: 16px;
+      font-weight: bold;
+      text-decoration: none;
+      border-radius: 8px;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+      z-index: 999;
+    }
 
-<a href="contact.html" class="contact-float-button">Contact Us</a>
-<style>
-  .contact-float-button {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    background-color: white;
-    color: black;
-    padding: 12px 20px;
-    font-size: 16px;
-    font-weight: bold;
-    text-decoration: none;
-    border-radius: 8px;
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
-    z-index: 999;
-  }
-
-  .contact-float-button:hover {
-    background-color: #ddd;
-  }
-</style>
-
+    .contact-float-button:hover {
+      background-color: #ddd;
+    }
+  </style>
+  <a class="contact-float-button" href="contact.html">Contact Us</a>
 </body>
+
 </html>
